<resources>
    <string name="app_name">AttendanceSystem</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="forgot_password">forgot password?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="employee_code">Employee code</string>
    <string name="name">Name</string>
    <string name="dob">Date of Birth</string>
    <string name="phone_no">Phone No</string>
    <string name="by_signing_up_you_agree_to_the" />
    <string name="privacy_policy_terms_conditions" />
    <string name="submit">Register</string>
    <string name="scan">Scan Fingerprint</string>
    <string name="saved_high_score_default_key">000</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="add_attendance">Add Attendance</string>
    <string name="delete_attendance">Delete Attendance</string>
    <string name="date">Date</string>
    <string name="attendance">Attendance</string>
    <string name="downloadData">Download Data</string>
    <string name="csvFormat">csv</string>
    <string name="text">text</string>
    <string name="deleteAllUSers">Delete Users</string>
    <string name="deleteAllAttendance">Delete  Attendance</string>
    <string name="scanfingerprint">Login via scan</string>

    <string name="grant_permissions">Grant Permissions</string>
    <string name="we_need_permission">We need camera permission to scan QR codes. Go to App Settings and manage
        permissions
    </string>
    <string name="grant">Grant</string>
    <string name="cancel">Cancel</string>


</resources>
