<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.crud.AddAttendanceFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/employeeCodeAttendance"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/signup"
        android:hint="@string/employee_code"
        android:paddingLeft="8dp"
        android:popupBackground="#BFFFF3"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/employeeNameAttendance"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/signup"
        android:hint="@string/name"
        android:inputType="text"
        android:textColor="#000000"
        android:textSize="20sp"
        android:paddingLeft="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employeeCodeAttendance" />

    <androidx.appcompat.widget.AppCompatTextView

        android:id="@+id/employeeDateAttendance"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/signup"
        android:hint="@string/date"
        android:popupBackground="#BFFFF3"
        android:paddingLeft="8dp"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employeeNameAttendance" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/employeePresentAttendance"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/signup"
        android:hint="@string/attendance"
        android:textColor="#000000"
        android:textSize="20sp"
        android:paddingLeft="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employeeDateAttendance" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitAttendance"
        android:layout_width="182dp"
        android:layout_height="44dp"
        android:background="@drawable/button_ig"
        android:text="@string/submit"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employeePresentAttendance"
        app:layout_constraintVertical_bias="0.161" />



</androidx.constraintlayout.widget.ConstraintLayout>